[project]
name = "garak"
version = "0.1.0"
description = "Public-repo secret leak detector for GitHub org members"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Logan MacLaren" }]
keywords = ["security", "github", "secrets", "trufflehog", "leak-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "httpx==0.28.1",
    "python-dotenv==1.2.2",
]

[project.urls]
Homepage = "https://github.com/maclarel/garak"
Source = "https://github.com/maclarel/garak"
Issues = "https://github.com/maclarel/garak/issues"

[project.scripts]
garak = "garak.cli:main"

[dependency-groups]
dev = [
    "pytest==9.0.3",
    "respx==0.23.1",
]

[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
